[FIX] web: adjust formView and alerts spacing
This commit adapts several spacing issues related to the formView and
alerts.

task-3355091
Part of task-332626

closes odoo/odoo#127201

X-original-commit: a137b33dbbf0d18ac6909f958d126c7922d12a61
Related: odoo/enterprise#43579

--- a/addons/web/static/src/views/form/form.variables.scss
+++ b/addons/web/static/src/views/form/form.variables.scss
@@ -1,2 +1,4 @@
+$o-sheet-vpadding: $o-spacer * 1.5 !default;
+
 $o-form-view-sheet-max-width: 1534px !default;
 $o-form-picture-size: 90px !default;
